--- a/src/bz-share-dialog.ui
+++ b/src/bz-share-dialog.ui
@@ -54,11 +54,9 @@
             <property name="xalign">0</property>
             <property name="ellipsize">middle</property>
             <binding name="label">
-              <closure function="get_share_url_name" type="gchararray">
-                <lookup name="string" type="GtkStringObject">
-                  <lookup name="item">GtkListItem</lookup>
-                </lookup>
-              </closure>
+              <lookup name="name" type="BzUrl">
+                <lookup name="item">GtkListItem</lookup>
+              </lookup>
             </binding>
           </object>
         </child>
@@ -73,11 +71,9 @@
                 <property name="hexpand">TRUE</property>
                 <property name="editable">FALSE</property>
                 <binding name="text">
-                  <closure function="get_share_url_link" type="gchararray">
-                    <lookup name="string" type="GtkStringObject">
-                      <lookup name="item">GtkListItem</lookup>
-                    </lookup>
-                  </closure>
+                  <lookup name="url" type="BzUrl">
+                    <lookup name="item">GtkListItem</lookup>
+                  </lookup>
                 </binding>
               </object>
             </child>
