--- a/src/bz-window.ui
+++ b/src/bz-window.ui
@@ -267,112 +267,118 @@
                   </object>
                 </child>
                 <property name="title-widget">
-                  <object class="AdwToggleGroup" id="title_toggle_group">
-                    <!-- <style> -->
-                    <!--   <class name="round"/> -->
-                    <!-- </style> -->
-                    <property name="homogeneous">TRUE</property>
-                    <child>
-                      <object class="AdwToggle">
-                        <property name="tooltip" translatable="yes">View Curated Applications</property>
-                        <property name="name">curated</property>
-                        <property name="child">
-                          <object class="GtkBox">
-                            <property name="halign">center</property>
-                            <property name="margin-start">15</property>
-                            <property name="margin-end">15</property>
-                            <property name="orientation">horizontal</property>
-                            <property name="spacing">6</property>
-                            <child>
-                              <object class="GtkImage">
-                                <property name="icon-name">starred-symbolic</property>
+                  <object class="GtkRevealer" id="title_revealer">
+                    <property name="transition-type">crossfade</property>
+                    <property name="transition-duration">200</property>
+                    <property name="child">
+                      <object class="AdwToggleGroup" id="title_toggle_group">
+                        <!-- <style> -->
+                        <!--   <class name="round"/> -->
+                        <!-- </style> -->
+                        <property name="homogeneous">TRUE</property>
+                        <child>
+                          <object class="AdwToggle">
+                            <property name="tooltip" translatable="yes">View Curated Applications</property>
+                            <property name="name">curated</property>
+                            <property name="child">
+                              <object class="GtkBox">
+                                <property name="halign">center</property>
+                                <property name="margin-start">15</property>
+                                <property name="margin-end">15</property>
+                                <property name="orientation">horizontal</property>
+                                <property name="spacing">6</property>
+                                <child>
+                                  <object class="GtkImage">
+                                    <property name="icon-name">starred-symbolic</property>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel">
+                                    <property name="label" translatable="yes">Curated</property>
+                                  </object>
+                                </child>
                               </object>
-                            </child>
-                            <child>
-                              <object class="GtkLabel">
-                                <property name="label" translatable="yes">Curated</property>
-                              </object>
-                            </child>
+                            </property>
                           </object>
-                        </property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="AdwToggle">
-                        <property name="tooltip" translatable="yes">View Installed Applications</property>
-                        <property name="name">installed</property>
-                        <property name="child">
-                          <object class="GtkBox">
-                            <property name="halign">center</property>
-                            <property name="margin-start">15</property>
-                            <property name="margin-end">15</property>
-                            <property name="orientation">horizontal</property>
-                            <property name="spacing">6</property>
-                            <child>
-                              <object class="GtkImage">
-                                <property name="icon-name">library-symbolic</property>
+                        </child>
+                        <child>
+                          <object class="AdwToggle">
+                            <property name="tooltip" translatable="yes">View Installed Applications</property>
+                            <property name="name">installed</property>
+                            <property name="child">
+                              <object class="GtkBox">
+                                <property name="halign">center</property>
+                                <property name="margin-start">15</property>
+                                <property name="margin-end">15</property>
+                                <property name="orientation">horizontal</property>
+                                <property name="spacing">6</property>
+                                <child>
+                                  <object class="GtkImage">
+                                    <property name="icon-name">library-symbolic</property>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkLabel">
+                                    <property name="label" translatable="yes">Installed</property>
+                                  </object>
+                                </child>
                               </object>
-                            </child>
-                            <child>
-                              <object class="GtkLabel">
-                                <property name="label" translatable="yes">Installed</property>
-                              </object>
-                            </child>
+                            </property>
                           </object>
-                        </property>
+                        </child>
+                        <!-- <child> -->
+                        <!--   <object class="AdwToggle"> -->
+                        <!--     <property name="tooltip" translatable="yes">Support Developers</property> -->
+                        <!--     <property name="name">support</property> -->
+                        <!--     <property name="child"> -->
+                        <!--       <object class="GtkBox"> -->
+                        <!--         <property name="halign">center</property> -->
+                        <!--         <property name="margin-start">15</property> -->
+                        <!--         <property name="margin-end">15</property> -->
+                        <!--         <property name="orientation">horizontal</property> -->
+                        <!--         <property name="spacing">6</property> -->
+                        <!--         <child> -->
+                        <!--           <object class="GtkImage"> -->
+                        <!--             <property name="icon-name">heart-filled-symbolic</property> -->
+                        <!--           </object> -->
+                        <!--         </child> -->
+                        <!--         <child> -->
+                        <!--           <object class="GtkLabel"> -->
+                        <!--             <property name="label" translatable="yes">Support</property> -->
+                        <!--           </object> -->
+                        <!--         </child> -->
+                        <!--       </object> -->
+                        <!--     </property> -->
+                        <!--   </object> -->
+                        <!-- </child> -->
+                        <!-- <child> -->
+                        <!--   <object class="AdwToggle"> -->
+                        <!--     <property name="tooltip" translatable="yes">News</property> -->
+                        <!--     <property name="name">news</property> -->
+                        <!--     <property name="child"> -->
+                        <!--       <object class="GtkBox"> -->
+                        <!--         <property name="halign">center</property> -->
+                        <!--         <property name="margin-start">15</property> -->
+                        <!--         <property name="margin-end">15</property> -->
+                        <!--         <property name="orientation">horizontal</property> -->
+                        <!--         <property name="spacing">6</property> -->
+                        <!--         <child> -->
+                        <!--           <object class="GtkImage"> -->
+                        <!--             <property name="icon-name">newspaper-symbolic</property> -->
+                        <!--           </object> -->
+                        <!--         </child> -->
+                        <!--         <child> -->
+                        <!--           <object class="GtkLabel"> -->
+                        <!--             <property name="label" translatable="yes">News</property> -->
+                        <!--           </object> -->
+                        <!--         </child> -->
+                        <!--       </object> -->
+                        <!--     </property> -->
+                        <!--   </object> -->
+                        <!-- </child> -->
+                        <signal name="notify::active-name" handler="page_toggled_cb" swapped="true" object="BzWindow"/>
                       </object>
-                    </child>
-                    <!-- <child> -->
-                    <!--   <object class="AdwToggle"> -->
-                    <!--     <property name="tooltip" translatable="yes">Support Developers</property> -->
-                    <!--     <property name="name">support</property> -->
-                    <!--     <property name="child"> -->
-                    <!--       <object class="GtkBox"> -->
-                    <!--         <property name="halign">center</property> -->
-                    <!--         <property name="margin-start">15</property> -->
-                    <!--         <property name="margin-end">15</property> -->
-                    <!--         <property name="orientation">horizontal</property> -->
-                    <!--         <property name="spacing">6</property> -->
-                    <!--         <child> -->
-                    <!--           <object class="GtkImage"> -->
-                    <!--             <property name="icon-name">heart-filled-symbolic</property> -->
-                    <!--           </object> -->
-                    <!--         </child> -->
-                    <!--         <child> -->
-                    <!--           <object class="GtkLabel"> -->
-                    <!--             <property name="label" translatable="yes">Support</property> -->
-                    <!--           </object> -->
-                    <!--         </child> -->
-                    <!--       </object> -->
-                    <!--     </property> -->
-                    <!--   </object> -->
-                    <!-- </child> -->
-                    <!-- <child> -->
-                    <!--   <object class="AdwToggle"> -->
-                    <!--     <property name="tooltip" translatable="yes">News</property> -->
-                    <!--     <property name="name">news</property> -->
-                    <!--     <property name="child"> -->
-                    <!--       <object class="GtkBox"> -->
-                    <!--         <property name="halign">center</property> -->
-                    <!--         <property name="margin-start">15</property> -->
-                    <!--         <property name="margin-end">15</property> -->
-                    <!--         <property name="orientation">horizontal</property> -->
-                    <!--         <property name="spacing">6</property> -->
-                    <!--         <child> -->
-                    <!--           <object class="GtkImage"> -->
-                    <!--             <property name="icon-name">newspaper-symbolic</property> -->
-                    <!--           </object> -->
-                    <!--         </child> -->
-                    <!--         <child> -->
-                    <!--           <object class="GtkLabel"> -->
-                    <!--             <property name="label" translatable="yes">News</property> -->
-                    <!--           </object> -->
-                    <!--         </child> -->
-                    <!--       </object> -->
-                    <!--     </property> -->
-                    <!--   </object> -->
-                    <!-- </child> -->
-                    <signal name="notify::active-name" handler="page_toggled_cb" swapped="true" object="BzWindow"/>
+                    </property>
                   </object>
                 </property>
                 <child type="end">
