--- a/src/bz-section-view.ui
+++ b/src/bz-section-view.ui
@@ -269,19 +269,56 @@
                 <property name="orientation">vertical</property>
                 <property name="spacing">5</property>
                 <child>
-                  <object class="GtkLabel">
-                    <style>
-                      <class name="title-2"/>
-                    </style>
-                    <property name="xalign">0</property>
-                    <property name="ellipsize">end</property>
-                    <binding name="label">
-                      <lookup name="title" type="BzEntry">
-                        <lookup name="ui-entry" type="BzEntryGroup">
-                          <lookup name="item">GtkListItem</lookup>
-                        </lookup>
-                      </lookup>
-                    </binding>
+                  <object class="GtkBox">
+                    <property name="orientation">horizontal</property>
+                    <property name="spacing">10</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <style>
+                          <class name="title-2"/>
+                        </style>
+                        <property name="hexpand">TRUE</property>
+                        <property name="xalign">0</property>
+                        <property name="ellipsize">end</property>
+                        <binding name="label">
+                          <lookup name="title" type="BzEntry">
+                            <lookup name="ui-entry" type="BzEntryGroup">
+                              <lookup name="item">GtkListItem</lookup>
+                            </lookup>
+                          </lookup>
+                        </binding>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="GtkRevealer" id="left_btn">
+                        <property name="transition-type">crossfade</property>
+                        <binding name="reveal-child">
+                          <lookup name="verified" type="BzEntry">
+                            <lookup name="ui-entry" type="BzEntryGroup">
+                              <lookup name="item">GtkListItem</lookup>
+                            </lookup>
+                          </lookup>
+                        </binding>
+                        <binding name="visible">
+                          <lookup name="verified" type="BzEntry">
+                            <lookup name="ui-entry" type="BzEntryGroup">
+                              <lookup name="item">GtkListItem</lookup>
+                            </lookup>
+                          </lookup>
+                        </binding>
+                        <property name="child">
+                          <object class="GtkImage">
+                            <style>
+                              <class name="accent"/>
+                            </style>
+                            <property name="has-tooltip">TRUE</property>
+                            <property name="tooltip-text" translatable="yes">This flatpak is verified by the original developers of the software.</property>
+                            <property name="icon-name">verified-checkmark-symbolic</property>
+                            <property name="icon-size">large</property>
+                          </object>
+                        </property>
+                      </object>
+                    </child>
                   </object>
                 </child>
                 <child>
