--- a/src/bz-section-view.ui
+++ b/src/bz-section-view.ui
@@ -313,7 +313,7 @@
                             <property name="has-tooltip">TRUE</property>
                             <property name="tooltip-text" translatable="yes">This flatpak is verified by the original developers of the software.</property>
                             <property name="icon-name">verified-checkmark-symbolic</property>
-                            <property name="icon-size">small</property>
+                            <property name="icon-size">normal</property>
                           </object>
                         </property>
                       </object>
