--- a/src/bz-window.ui
+++ b/src/bz-window.ui
@@ -3,8 +3,8 @@
   <requires lib="gtk" version="4.0"/>
   <requires lib="Adw" version="1.0"/>
   <template class="BzWindow" parent="AdwApplicationWindow">
-    <property name="default-width">1200</property>
-    <property name="default-height">750</property>
+    <property name="default-width">1500</property>
+    <property name="default-height">1000</property>
     <property name="width-request">550</property>
     <property name="height-request">400</property>
     <property name="content">
@@ -22,6 +22,7 @@
                   <object class="AdwOverlaySplitView" id="split_view">
                     <property name="show-sidebar">FALSE</property>
                     <property name="pin-sidebar">TRUE</property>
+                    <property name="sidebar-position">end</property>
                     <property name="sidebar">
                       <object class="AdwViewStack" id="transactions_stack">
                         <property name="enable-transitions">TRUE</property>
@@ -142,78 +143,98 @@
                       </object>
                     </property>
                     <property name="content">
-                      <object class="AdwToastOverlay" id="toasts">
-                        <property name="child">
-                          <object class="GtkOverlay">
+                      <object class="AdwOverlaySplitView" id="search_split">
+                        <property name="show-sidebar">FALSE</property>
+                        <property name="pin-sidebar">TRUE</property>
+                        <property name="sidebar-position">start</property>
+                        <signal name="notify::show-sidebar" handler="search_split_open_changed_cb" swapped="true" object="BzWindow"/>
+                        <property name="sidebar">
+                          <object class="AdwToolbarView">
+                            <property name="content">
+                              <object class="BzSearchWidget" id="search_widget">
+                                <property name="width-request">400</property>
+                                <binding name="model">
+                                  <lookup name="applications">BzWindow</lookup>
+                                </binding>
+                              </object>
+                            </property>
+                          </object>
+                        </property>
+                        <property name="content">
+                          <object class="AdwToastOverlay" id="toasts">
                             <property name="child">
-                              <object class="AdwViewStack" id="main_stack">
-                                <property name="enable-transitions">TRUE</property>
-                                <property name="transition-duration">200</property>
-                                <child>
-                                  <object class="AdwViewStackPage">
-                                    <property name="name">offline</property>
-                                    <property name="title" translatable="yes">Offline</property>
-                                    <property name="child">
-                                      <object class="AdwStatusPage">
-                                        <property name="icon-name">connected-squares-x</property>
-                                        <property name="title">Offline</property>
+                              <object class="GtkOverlay">
+                                <property name="child">
+                                  <object class="AdwViewStack" id="main_stack">
+                                    <property name="enable-transitions">TRUE</property>
+                                    <property name="transition-duration">200</property>
+                                    <child>
+                                      <object class="AdwViewStackPage">
+                                        <property name="name">offline</property>
+                                        <property name="title" translatable="yes">Offline</property>
+                                        <property name="child">
+                                          <object class="AdwStatusPage">
+                                            <property name="icon-name">connected-squares-x</property>
+                                            <property name="title">Offline</property>
+                                          </object>
+                                        </property>
                                       </object>
-                                    </property>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="AdwViewStackPage">
-                                    <property name="name">loading</property>
-                                    <property name="title" translatable="yes">Loading</property>
-                                    <property name="child">
-                                      <object class="AdwSpinner" id="spinner"/>
-                                    </property>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="AdwViewStackPage">
-                                    <property name="name">browse</property>
-                                    <property name="title" translatable="yes">Browse</property>
-                                    <property name="child">
-                                      <object class="BzBrowseWidget" id="browse">
-                                        <binding name="content-provider">
-                                          <lookup name="content-provider">BzWindow</lookup>
-                                        </binding>
-                                        <signal name="group-selected" handler="browser_group_selected_cb" swapped="true"/>
+                                    </child>
+                                    <child>
+                                      <object class="AdwViewStackPage">
+                                        <property name="name">loading</property>
+                                        <property name="title" translatable="yes">Loading</property>
+                                        <property name="child">
+                                          <object class="AdwSpinner" id="spinner"/>
+                                        </property>
                                       </object>
-                                    </property>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="AdwViewStackPage">
-                                    <property name="name">view</property>
-                                    <property name="title" translatable="yes">App View</property>
-                                    <property name="child">
-                                      <object class="BzFullView" id="full_view">
-                                        <binding name="transaction-manager">
-                                          <lookup name="transaction-manager">BzWindow</lookup>
-                                        </binding>
-                                        <signal name="install" handler="full_view_install_cb" swapped="true" object="BzWindow"/>
-                                        <signal name="remove" handler="full_view_remove_cb" swapped="true" object="BzWindow"/>
+                                    </child>
+                                    <child>
+                                      <object class="AdwViewStackPage">
+                                        <property name="name">browse</property>
+                                        <property name="title" translatable="yes">Browse</property>
+                                        <property name="child">
+                                          <object class="BzBrowseWidget" id="browse">
+                                            <binding name="content-provider">
+                                              <lookup name="content-provider">BzWindow</lookup>
+                                            </binding>
+                                            <signal name="group-selected" handler="browser_group_selected_cb" swapped="true"/>
+                                          </object>
+                                        </property>
                                       </object>
-                                    </property>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="AdwViewStackPage">
-                                    <property name="name">installed</property>
-                                    <property name="title" translatable="yes">Installed</property>
-                                    <property name="child">
-                                      <object class="BzInstalledPage">
-                                        <binding name="model">
-                                          <lookup name="installed">BzWindow</lookup>
-                                        </binding>
-                                        <signal name="install" handler="installed_page_install_cb" swapped="true" object="BzWindow"/>
-                                        <signal name="remove" handler="installed_page_remove_cb" swapped="true" object="BzWindow"/>
+                                    </child>
+                                    <child>
+                                      <object class="AdwViewStackPage">
+                                        <property name="name">view</property>
+                                        <property name="title" translatable="yes">App View</property>
+                                        <property name="child">
+                                          <object class="BzFullView" id="full_view">
+                                            <binding name="transaction-manager">
+                                              <lookup name="transaction-manager">BzWindow</lookup>
+                                            </binding>
+                                            <signal name="install" handler="full_view_install_cb" swapped="true" object="BzWindow"/>
+                                            <signal name="remove" handler="full_view_remove_cb" swapped="true" object="BzWindow"/>
+                                          </object>
+                                        </property>
                                       </object>
-                                    </property>
+                                    </child>
+                                    <child>
+                                      <object class="AdwViewStackPage">
+                                        <property name="name">installed</property>
+                                        <property name="title" translatable="yes">Installed</property>
+                                        <property name="child">
+                                          <object class="BzInstalledPage">
+                                            <binding name="model">
+                                              <lookup name="installed">BzWindow</lookup>
+                                            </binding>
+                                            <signal name="install" handler="installed_page_install_cb" swapped="true" object="BzWindow"/>
+                                            <signal name="remove" handler="installed_page_remove_cb" swapped="true" object="BzWindow"/>
+                                          </object>
+                                        </property>
+                                      </object>
+                                    </child>
                                   </object>
-                                </child>
+                                </property>
                               </object>
                             </property>
                           </object>
@@ -232,34 +253,6 @@
                       </object>
                     </child>
                     <child type="start">
-                      <object class="GtkToggleButton" id="toggle_transactions">
-                        <style>
-                          <class name="flat"/>
-                        </style>
-                        <property name="has-tooltip">TRUE</property>
-                        <property name="tooltip-text" translatable="yes">Toggle transaction sidebar</property>
-                        <property name="active"
-                                  bind-source="split_view"
-                                  bind-property="show-sidebar"
-                                  bind-flags="bidirectional|sync-create"/>
-                        <property name="child">
-                          <object class="BzGlobalProgress">
-                            <property name="icon-name">sidebar-show-symbolic</property>
-                            <binding name="active">
-                              <lookup name="active" type="BzTransactionManager">
-                                <lookup name="transaction-manager">BzWindow</lookup>
-                              </lookup>
-                            </binding>
-                            <binding name="fraction">
-                              <lookup name="current-progress" type="BzTransactionManager">
-                                <lookup name="transaction-manager">BzWindow</lookup>
-                              </lookup>
-                            </binding>
-                          </object>
-                        </property>
-                      </object>
-                    </child>
-                    <child type="start">
                       <object class="GtkButton" id="refresh">
                         <property name="has-tooltip">TRUE</property>
                         <property name="tooltip-text" translatable="yes">Refresh</property>
@@ -272,10 +265,14 @@
                       </object>
                     </child>
                     <child type="start">
-                      <object class="GtkButton" id="search">
+                      <object class="GtkToggleButton" id="search">
                         <property name="has-tooltip">TRUE</property>
                         <property name="tooltip-text" translatable="yes">Search</property>
                         <property name="icon-name">system-search-symbolic</property>
+                        <property name="active"
+                                  bind-source="search_split"
+                                  bind-property="show-sidebar"
+                                  bind-flags="bidirectional|sync-create"/>
                       </object>
                     </child>
                     <child type="start">
@@ -412,6 +409,39 @@
                         <property name="menu-model">primary_menu</property>
                       </object>
                     </child>
+                    <child type="end">
+                      <object class="GtkToggleButton" id="toggle_transactions">
+                        <style>
+                          <class name="flat"/>
+                        </style>
+                        <property name="has-tooltip">TRUE</property>
+                        <property name="tooltip-text" translatable="yes">Toggle transaction sidebar</property>
+                        <property name="active"
+                                  bind-source="split_view"
+                                  bind-property="show-sidebar"
+                                  bind-flags="bidirectional|sync-create"/>
+                        <property name="child">
+                          <object class="BzGlobalProgress">
+                            <binding name="active">
+                              <lookup name="active" type="BzTransactionManager">
+                                <lookup name="transaction-manager">BzWindow</lookup>
+                              </lookup>
+                            </binding>
+                            <binding name="fraction">
+                              <lookup name="current-progress" type="BzTransactionManager">
+                                <lookup name="transaction-manager">BzWindow</lookup>
+                              </lookup>
+                            </binding>
+                            <property name="child">
+                              <object class="GtkImage">
+                                <property name="halign">end</property>
+                                <property name="icon-name">folder-download-symbolic</property>
+                              </object>
+                            </property>
+                          </object>
+                        </property>
+                      </object>
+                    </child>
                   </object>
                 </child>
                 <child type="bottom">
@@ -425,9 +455,11 @@
             </property>
             <child>
               <object class="AdwBreakpoint">
-                <condition>max-width: 1000px</condition>
+                <condition>max-width: 1200px</condition>
                 <setter object="split_view" property="collapsed">TRUE</setter>
-                <setter object="transactions" property="width-request">200</setter>
+                <setter object="search_split" property="collapsed">TRUE</setter>
+                <setter object="transactions" property="width-request">250</setter>
+                <setter object="search_widget" property="width-request">250</setter>
                 <setter object="toolbar_view" property="reveal-bottom-bars">TRUE</setter>
                 <setter object="top_header_bar" property="show-title">FALSE</setter>
                 <setter object="bottom_header_bar" property="show-title">TRUE</setter>
