--- a/src/bz-installed-page.ui
+++ b/src/bz-installed-page.ui
@@ -67,6 +67,35 @@
                 <lookup name="item">GtkListItem</lookup>
               </lookup>
             </binding>
+            <binding name="visible">
+              <closure function="invert_boolean" type="gboolean">
+                <closure function="is_null" type="gboolean">
+                  <lookup name="icon-paintable" type="BzEntry">
+                    <lookup name="item">GtkListItem</lookup>
+                  </lookup>
+                </closure>
+              </closure>
+            </binding>
+          </object>
+        </child>
+        <child>
+          <object class="GtkImage">
+            <property name="valign">center</property>
+            <property name="halign">center</property>
+            <property name="width-request">32</property>
+            <property name="height-request">32</property>
+            <property name="margin-start">15</property>
+            <property name="margin-top">15</property>
+            <property name="margin-bottom">15</property>
+            <property name="pixel-size">32</property>
+            <property name="icon-name">image-missing-symbolic</property>
+            <binding name="visible">
+              <closure function="is_null" type="gboolean">
+                <lookup name="icon-paintable" type="BzEntry">
+                  <lookup name="item">GtkListItem</lookup>
+                </lookup>
+              </closure>
+            </binding>
           </object>
         </child>
         <child>
