--- a/src/bz-transaction-view.ui
+++ b/src/bz-transaction-view.ui
@@ -241,6 +241,28 @@
                     <lookup name="item">GtkListItem</lookup>
                   </lookup>
                 </binding>
+                <binding name="visible">
+                  <closure function="invert_boolean" type="gboolean">
+                    <closure function="is_null" type="gboolean">
+                      <lookup name="icon-paintable" type="BzEntry">
+                        <lookup name="item">GtkListItem</lookup>
+                      </lookup>
+                    </closure>
+                  </closure>
+                </binding>
+              </object>
+            </child>
+            <child>
+              <object class="GtkImage">
+                <property name="icon-size">large</property>
+                <property name="icon-name">image-missing-symbolic</property>
+                <binding name="visible">
+                  <closure function="is_null" type="gboolean">
+                    <lookup name="icon-paintable" type="BzEntry">
+                      <lookup name="item">GtkListItem</lookup>
+                    </lookup>
+                  </closure>
+                </binding>
               </object>
             </child>
             <child>
